# projects

./: CLAUDE.md  README.md  plan.md
Tax Project/: pyproject.toml
Tax Project/backend/: main.py
Tax Project/backend/api/: routes.py
Tax Project/backend/engine/: calculator.py  income_tax.py  schedule_c.py
Tax Project/backend/models/: tax_config.py  taxpayer.py
Tax Project/backend/rag/: guidance.py
Tax Project/backend/tests/: test_api.py  test_schedule_d_e.py
apps/web/: package-lock.json  package.json  tailwind.config.js
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: BreakdownTable.tsx  ConfidenceBadge.tsx  ExpirationCountdown.tsx  Footer.tsx  Nav.tsx  PatentCard.tsx  StatsBar.tsx  UrgencyBadge.tsx
apps/web/lib/: mockPatents.ts  patents.ts  types.ts
modules/expiration/: README.md  package-lock.json  package.json  tsconfig.json
modules/expiration-pipeline/: README.md  package-lock.json  package.json
modules/expiration-pipeline/data/: .gitkeep
modules/expiration-pipeline/src/: enricher.ts  index.ts  lookahead.ts  storage.ts  types.ts
modules/expiration-pipeline/tests/: enricher.test.ts  lookahead.test.ts  pipeline.test.ts
modules/expiration/src/: confidence.ts  expirationCalculator.ts  index.ts
modules/ingestion/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
modules/normalization/: README.md  package-lock.json  package.json
shooter/: shooter.html
tax-project/: claudetax.md
tax-project/data/: tax_guidance.json
tax-project/frontend/: index.html  tax-engine.js
(+51 files in other folders)
