[project]
name = "tax-planner"
version = "0.1.0"
description = "A consumer-facing tax planning application for personal (1040) and Schedule C taxes"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
